style: fix alignment and background tinted effect

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -20,8 +20,9 @@ background-color:  rgb(10, 15, 43);
   // background-color: rgb(10, 15, 43, 0.3);
   // background-blend-mode: overlay;
   display: flex;
-  justify-items: center;
+  justify-content: center;
   align-items: center;
+  background-image: linear-gradient(rgba(194, 194, 194, 0.3), rgba(194, 194, 194, 0.2)), url('../assets/background.jpg');
 
   &::before {
     content: "";
@@ -30,7 +31,7 @@ background-color:  rgb(10, 15, 43);
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(0, 0, 0, 0.5);
+    background-color: rgba(10, 15, 43, 0.3);
     z-index: 1;
   }
 }
@@ -38,5 +39,9 @@ background-color:  rgb(10, 15, 43);
 .start-screen {
   display: flex;
   flex-direction: column;
-  
+  justify-content: center;
+  padding: 20px;
+  text-align: center;
+  background-color: #f3f3f3;
+  z-index: 2;
 }
